[package]
name = "forward-bot"
version = "0.1.0"
authors = ["Junkman <ox0spy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
actix-web = "2"
actix-rt = "1"
serde = { version = "1.0", features = ["derive"] }
